removed reference to index.html

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
 
             <ul>
                 <li class="active">
-                    <a href="index.html">Spelet</a>
+                    <a href="/">Spelet</a>
                 </li>
                 <input type="search" ng-model="model.search" name="Search" placeholder="Sök efter profil..." />
                 <li ng-repeat="profile in loadedProfiles">
