shoutout to creator, change mail

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
         <h2 class="staben">STABEN</h2>
         <p>presenterar</p>
         <h3>dödskrök.se</h3>
+		<p>Originalsidan skapad av <a href="https://github.com/AnteWall">Ante Wall</a>.</p>
         <nav ng-controller="MenuCtrl">
 
             <ul>
@@ -44,12 +45,12 @@
             </ul>
         </nav>
         <div class="apps">
-            <p>Snart finns Dödskrök.se med Chromecastsupport via Android!</p>
+            <p>Snart&trade; finns Dödskrök.se med Chromecastsupport via Android!</p>
             <img src="/img/play_store.png">
             <p class="small">Android applikation av <a href="https://jacob-andersson.com/" target="_blank" >Jacob Andersson</a></p>
         </div>
         <p class="mail">Frågor eller annat?
-            <br>Maila ante@dödskrök.se</p>
+		<br>Maila <a href="mailto:orson@mahaad.nu?subject=[dödskrök]">orson@mahaad.nu</p>
         <p class="version">Version 3.1.0 - <a href="changelog">Changelog</a></p>
     </div>
     <div class="container" ng-controller="DkCtrl">
