--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dödskrök.se - Spel - Powered by STABEN</title>
+    <title>Dödskrök - Spel - Powered by STABEN</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,700italic,300,700,400' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='bower_components/typicons.font/src/font/typicons.min.css' />
     <link rel="stylesheet" href="css/normalize.css">
@@ -29,7 +29,7 @@
     <div ng-hide="$root.hideMenu" id="navigation">
         <h2 class="staben">STABEN</h2>
         <p>presenterar</p>
-        <h3>dödskrök.se</h3>
+        <h3>Dödskrök</h3>
 		<p>Originalsidan skapad av <a href="https://github.com/AnteWall">Ante Wall</a>.</p>
         <nav ng-controller="MenuCtrl">
 
