--- a/views/changelog.ejs
+++ b/views/changelog.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dödskrök.se - Changelog - Powered by STABEN</title>
+  <title>Dödskrök - Changelog - Powered by STABEN</title>
   <link href='http://fonts.googleapis.com/css?family=Roboto:100,700italic,300,700,400' rel='stylesheet' type='text/css'>
   <link rel='stylesheet' href='bower_components/typicons/src/font/typicons.min.css' />
   <link rel="stylesheet" href="css/normalize.css">
@@ -17,7 +17,7 @@
   <div id="navigation">
     <h2 class="staben">STABEN</h2>
     <p>presenterar</p>
-    <h3>dödskrök.se</h3>
+    <h3>Dödskrök</h3>
     <nav ng-controller="MenuCtrl">
       <ul>
         <li>
