--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,20 +25,8 @@
         <nav ng-controller="MenuCtrl">
 
             <ul>
-                <li class="active">
-					<a ng-click="profile('staben')">STABEN</a>
-                </li>
-                <li class="active">
-					<a ng-click="profile('dgroup')">D-Group</a>
-                </li>
-                <li class="active">
-					<a ng-click="profile('donna')">Donna</a>
-                </li>
-                <li class="active">
-					<a ng-click="profile('styret')">Styret</a>
-                </li>
-                <li class="active">
-					<a ng-click="profile('mahaad')">Snabbt äventyr</a>
+                <li ng-repeat="dprofile in defaultProfiles">
+                    <a ng-click="profile(dprofile)">{{ dprofile }}</a>
                 </li>
                 <input type="search" ng-model="model.search" name="Search" placeholder="Sök efter profil..." />
                 <li ng-repeat="profile in loadedProfiles">
